# enumetyped

./: LICENSE  README.md  pyproject.toml
docs/: compatibility.md  limitations.md
enumetyped/: __init__.py  core.py
enumetyped/pydantic/: __init__.py  core.py
enumetyped/pydantic/serialization/: __init__.py  adjacent.py  adjacently.py  external.py  externally.py  internal.py  internally.py  tagged.py  tagging.py
tests/: test_core.py  test_core_pydantic.py  test_core_pydantic_deffered_dep.py  test_tagging_adjacent.py  test_tagging_external.py  test_tagging_internal.py
